--- a/algebruh/algebra.tex
+++ b/algebruh/algebra.tex
@@ -57,6 +57,9 @@
 \DeclareMathOperator{\ev}{ev}
 \DeclareMathOperator{\lcm}{lcm}
 \DeclareMathOperator{\chard}{char}
+\DeclareMathOperator{\CC}{\mathbb{C}}
+\DeclareMathOperator{\RR}{\mathbb{R}}
+\DeclareMathOperator{\NN}{\mathbb{N}}
 
 \begin{document}
 
@@ -983,9 +986,205 @@
 
 \subsection{Комплексные числа. Решение квадратных уравнений в $\mathbb{С}$}
 
+Пусть есть поле $\mathbb{R}$. Рассмотрим поле разложения $x^2+1\Rightarrow \mathbb{R}[y]/(y^2+1)$. Будем обозначать это поле за $\mathbb{C}$ и называть \hypertarget{n38}{\textcolor{red}{\textit{полем комплексных чисел}}}. При этом вместо $y$ пишут $i$. Это поле хорошо тем, что всякий многочлен в нём имеет корень. Покажем это для квадратных многочленов. Пусть дан многочлен $ax^2+bx+c$, поделим его на $a$ и сделаем замену переменной, полуичим многочлен вида $z^2$=d. То есть, нам нужно научить ся извлекать корень из комплексного числа. Это делается либо ''тупо в лоб'', либо через формулу Муавра:\
+$z^n=e^{i\varphi n}=\cos(\varphi n)+i\sin(\varphi n)$. Распишем $c=s(\cos\psi+i\sin\psi)$ для параметров $s, \psi\in\mathbb{R}, s\geq 0$, тогда подойдёт
+\[
+    z=s^{\frac1n}(\cos(\psi / n)+i\sin(\psi/n)).
+\]
+
+Во время рассказа можно упомянуть, что такое модуль и сопряжённое, а также несколько их свойств (которые слишком уж очевидны).
+
+\begin{defn}
+    Поле называется \hypertarget{n39}{\textcolor{red}{\textit{алгебраически замкнутым}}}, если любой многочлен $f(x)\in F[x]$ степени хотя бы 1 имеет хот ябы один корень. То есть все многочлены в $F[x]$ раскладываются на линейные множители.
+\end{defn}
+
+\resetall
+
 \subsection{Основная теорема алгебры}
 
+\begin{theorem}
+    (\hypertarget{n40}{\textcolor{red}{\textit{Основная теорема алгебры}}}). $\mathbb{c}$ - алгебраисески замунутое поле (см конец предыдущего билета). 
+\end{theorem}
+
+\begin{proof}
+    Будем доказывать, через модули чисел (для комплексных и вещественных это одно и то же). Будем говорить, что последовательность $\{z_n\}_{n\in\mathbb{N}}\subset \mathbb{C}$ сходится к $z_0$, если 
+    \[
+        \forall \varepsilon >0 \exists N\in \mathbb{N} \forall n>N:\vert z_n-z_0\vert <\varepsilon.
+    \]
+
+    \begin{lemma}
+        Пусть $z_n$ - последовательность комплексных чисел, $x_n$ и $y_n$ - её вещественная и мнимая части. $\{z_n\}$ сходится к $z_0$ тогда и только тогда, когда $\{x_n\}\rightarrow x_0:=\text{Re}z_0$ и $\{y_n\}\rightarrow y_0:=\text{Im}z_0$.
+    \end{lemma}
+
+    \begin{proof}
+        \textcolor{red}{$\Leftarrow$} Возьмём $\varepsilon/2$ и такие моменты начиная с $N_1, N_2$ для $x_1, x_2$ соответственно, начиная с которых мнимые и вещественные части попадают в выбранную окрестность. Теперь выберем максимальный из этих моментов и получим требуемое.\ 
+        \textcolor{red}{$\Rightarrow$} Возьмём $\varepsilon$, выберем натуральное $N$ так, чтобы $\forall n >N \vert z_n-z_0\vert <\varepsilon$. То есть, $\sqrt{(x_n-x_0)^2+(y_n-y_0)^2}<\varepsilon$, но тогжа и расстояние от мнимой, и расстояние от вещественной части до предела меньше $\varepsilon$.
+    \end{proof}
+
+    \begin{lemma}
+        (Непрерывность арифметики). Пусть $\{z_n\}\rightarrow z_0, \{w_n\}\rightarrow w_0$. Тогда выполнены правила предела суммы и произведения пределов.
+    \end{lemma}
+
+    \begin{cons}
+        (Непрерывность многочленов). Пусть $f(z)$ - многочлен из $\mathbb{C}[z], \{z_n\}\rightarrow z_0$. Тогда $\{f(z_n)\}\rightarrow f(z_0)$.
+    \end{cons}
+
+    \begin{lemma}
+        (Секвенциальная компактность диска). Пусть последовательность $\{z_n\}$ такова, что последовательность из её модулей $\{\vert z_n\vert\}$ ограничена. Тогда из $\{z_n\}$ можно выбрать сходящуюся подпоследовательность $\{z_{n_k}\}\rightarrow z_0$, где $\vert z_n\vert$ - конечное число.
+    \end{lemma}
+
+    \begin{proof}
+        Пусть $z_n=x_n+y_n i$. Тогда сначала выберем подпоследовательность по $x_i$ (ну она ограничена, по матану мы так умеем), а потом из соответствующих им $y_j$ также выберем сходящуюся подпоследовательность.
+    \end{proof}
+
+    \begin{lemma}
+        Пусть $f(x)\in\mathbb{C}[z]$ - многочлен ненулевой степени, а $\{z_n\}$ расходится. Тогда $\{f(z_n)\}$ также расходится.
+    \end{lemma}
+
+    \begin{proof}
+        Пусть 
+        \[
+            f(z)=a_nz^n+a_{n-1}z^{n-1}+\dots+a_0.
+        \]
+        Тогда
+        \[
+            \frac{f(z)}{z^n}=a_n+\frac{a_{n-1}}{z}+\dots+\frac{a_0}{z^n}.
+        \]
+        При $z\rightarrow \infty$ все члены, кроме $a_n$, стремятся к 0. По непрерывности арифметики получим, что при $z\rightarrow \infty$ $\frac{f(z)}{z^n}\rightarrow a_n$. А значит, $f(z)$ тем более стремится к бесконечности.
+    \end{proof}
+
+    \begin{lemma}
+        Пусть $f\in\mathbb{C}[z]$ - многочлен ненулевой степени. Пусть $z_0$ - не корень $f$. Тогда существует $z_1\in \mathbb{C}$ такое, что $\vert f(z_1)\vert <\vert f(z_0)\vert $.
+    \end{lemma}
+
+    \begin{proof}
+        Можно считать, что $z_0=0$ (через замену переменной). Без ограничения общности, $f(0)=1$, так как можем сначала поделить на $f(0)$, а затем обратно домножить. Значит, мы получили, что свободный член равен единице.  Пусть $k$ - следующий посне 0 номер ненулевого коэффициента, тогда
+        \[
+            f(z)=1+c_kz^k+\dots+c_nz^n, c_k\neq 0.
+        \]
+        Возьмём $z=wt$, где $t\in (0,1)$ - небольшое вещественное число, а $w$ таково, что $с_kw^k=-1$. Подставим это в $f$ и вынесем $t^k$:
+        \[
+            f(z)=1-t^k+c_{k+1}w^{k+1}t^{k+1}+\dots+c_nw^nt^n=1-t^k+t^k(c_{k+1}w^{k+1}t+\dots+c_nw^nt^{n-k}).
+        \]
+    
+        Здесь последний множительно в скобках не превосходит $A\cdot(n-k)\cdot t$ для какой-то положительной константы $A$, которая зависит от $\{c_i\}$ и $w$. Таким образом, при
+        \[
+            t<\frac{1}{(n-k)A}
+        \]
+        этот множитель меньше единицы: $\vert c_{k+1}w^{k+1}t+\dots+c_nw^{n}t^{n-k}\vert<1$, а тогда $\vert f(z\vert <(1-t^k)+t^k=1)$, что и требовалось.
+    \end{proof}
+
+    Осталось доказать основную теорему алгебры. Рассмотрим
+    \[
+        \inf_{z\in\mathbb{C}}\vert f(z)\vert = m.
+    \]
+    Если он достигается, то по лемме не может быть положительным, так что $ ь=0$. Пусть не достигается, тогда выберем подпоследовательность $\{z_n\}$ такую, что $\{\vert f(z_n)\vert\}\rightarrow m$. Тогда $\{\vert z_n\vert\}$ ограничена, иначе бы из неё можно было выбрать подпоследовательность, которая стремится к бесконечности, а тогда и многочлен на этой подпоследовательности стремился бы к бесконечности. По секвенциальной компактности диска, выбираем сходящуюся подпоследовательность, стремящуюся к $z_0$. Тогда по непрерывности $f$, значение в $z_0$ равно пределу значений сходящейся подпоследовательности, инфимум всё же достигается.\
+
+    Мы поняли, что $\inf \vert f(z_n)\vert=0$, при этом этот инфинум всё же достигается. Значит, существует $z_0$ такое, что $\vert f(z_0)\vert =0$. Таким образом, у $f$ есть хотя бы один корень.  
+\end{proof}
+
+\resetall
+
 \subsection{Разложение рациональной функции в простейшие дроби над $\mathbb{C}$ и над $\mathbb{R}$}
+
+Учимся раскладывать $\frac{f(x)}{g(x)}$, где $g(x)=(x-\alpha_1)^{m_1}\dots(x-\alpha_k)^{m_k}$,   в сумму дробей вида $\frac{c}{(x-\alpha_i)^{l_i}}, c\in\mathbb{C}$, то есть, хотим найти разложение
+\[
+    \frac{f(x)}{\Pi(x-\alpha_i)^{m_i}}=\sum_{i=1}^k\sum_{l=1}^{m_i} \frac{c_{i, l}}{(x-\alpha_i)^{l_i}}
+\]
+
+\begin{theorem}
+    \hypertarget{n41}{\textcolor{red}{\textit{Разложение}}} правильной дроби в $\CC(x)$ в сумму простейших существует и притом единственно.
+\end{theorem}
+
+\begin{proof}
+    Домножим разложение, которое мы хотим найти, на $g(x)$. Теперь хотим найти разложение
+    \[
+        f(x)=\sum_{i=1}^k\sum_{l=1}^{m_i}c_{i, l}(x-\alpha_i)^{m_i-l}\Pi_{j\neq i}(x-\alpha_j)^{m_j}.
+    \]
+    Заметим, что в $f(\alpha_i)$ обнуляется всё, кроме одного слагаемого вида $c_{i, l}(a_i-a_i)^0\Pi_{j\neq i}(\alpha_i-a_j)^{m_j}$. Тогда 
+    \[
+        c_{i, m_i}=\frac{f(\alpha_i)}{\Pi_{j\neq i}(a_i-a_j)^{m_j}}.
+    \]
+    Теперь из $f(x)$ вычтем те слагаемые из этой суммы, из которых мы нашли коэффициенты. Пусть 
+    \[
+        f_i(x):=f(x)-\sum_i c_{i, m_i}\Pi_{j\neq i}(x-\alpha_j)^{m_j}.
+    \]
+    Этот многочлен делится на $(x-\alpha_i)$ для любого $i$. Вычтенное сокращается:
+    \[
+        f_1=\sum_{i=1}^k\sum_{l=1}^{m_i-1}c_{i, l}(x-\alpha_i)^{m_i-l}\Pi_{j\neq l}(x-\alpha_j)^{m_j}.
+    \]
+    Большинство слагаемых при оставшихся коэффициентах делятся на $(x-\alpha_i)^2$, а при взятии производной и вычислении на $\alpha_i$ они будут обнуляться. Одно слагаемое останется: то, которое привязано к $c_{i, m_i-1}$. Из значения $f'(\alpha_i)$ так же полкчаем формулу для следующей партии коэффициентов $c_{i, m_i-1}$, по индукции найдём для всех остальных. Из этого сразу будет следовать единственность.\ 
+
+    Будем теперь считать, что мы знаем $c_{i, l}$. Возьмём $h$ равным тому исходному выражению для $f$:
+    \[
+        h(x):=\sum_{i=1}^k\sum_{l=1}^{m_i}c_{i, l}(x-\alpha_i)^{m_i-l}\Pi_{j\neq i}(x-\alpha)^{m_j}.
+    \]
+    Хотим показать, что $f(x)=h(x)$. Что мы знаем об этих функциях? По определению коэффициентов $c_{i,j}$ производные $f$ и $g$ в точках $\{\alpha_i\}$ равны, а именно, для каждого $i$
+    \[
+        f(\alpha_i)=h(\alpha_i), \dots, f^{(m_i-1)(\alpha_i)=h^{(m_i-1)(\alpha_i)}}.
+    \]
+    А это задача интерполяции Эрмита, у неё единственное решение нужной степени, из этого $h(x)=f(x)$.
+\end{proof}
+
+\begin{theorem}
+    Разложение правильной дроби в $\RR(x)$ в сумму простейших существует и притом единственно.
+\end{theorem}
+
+\begin{proof}
+    Есть дробь $\frac{f(x)}{g(x)}$, представим знаменатель $g(x)=\Pi p_i^{m_i}$, где $p_i(x)$ - неприводимые, попарно не ассоциированные. Для начала давайте найдём разложение
+    \[
+        \frac{f(x)}{g(x)}=\sum_i\frac{a_i(x)}{p_i^{m_i}}, 
+    \]
+    где все дроби в сумме правильные. Домножим на знаменатель:
+    \[
+        f(x)=\sum_i a_i(x)\Pi_{j\neq i}p_j^{m_j}.
+    \]
+    Здесь все слагаемые, кроме одного, делятся на $p_i^{m_i}$.\ 
+
+    Теперь нам надо перейти к фактор-кольцу $F[x]/(p_i^{m_i})$, тогда нам необходимо будет равенство
+    \[
+        [f(x)]=[a_i(x)]\Bigl[\Pi_{j\neq i}p_j^{m_j}\Bigr], 
+    \]
+    при этом элементы $[f(x)]$ и $\Bigl[\Pi_{j\neq i}p_j^{m_j}\Bigr]$ мы также знаем, а значит, можем восстановить и $[a_i(x)]$, нам нужно лишь обратимость $\Bigl[\Pi_{j\neq i}p_j^{m_j}\Bigr]$ в $F[x]/(p_i^{m_i})$. В $F[x]/(p_i^{m_i})$ обратимыми будут те элементы, которые взаимно просты с $p_i^{m_i}$, так как $F[x]$ - евклидово кольцо и работает линейное представление НОД. Наше произведение $\Bigl[\Pi_{j\neq i}p_j^{m_j}\Bigr]$ взаимно просто с $p_i^{m_i}$, поэтому обратимо. Можем найти $[a_i(x)]$. При этом мы можем выбрать такой представитель этого класса эквивалентности, что $\deg a_i<\deg p_i^{m_i}$. Получилось, что если разложение существует, то оно единственно.\ 
+
+    Докажем существование. Давайте этим методом составим некоторый многочлен $h(x)$. Тогда мы знаем, что для любого $i$ $h(x)\equiv f(x \mod p_i^{m_i})$. По КТО $h$ и $f$ сравнимы и по модулю произведения $\{p_i^{m_i}\}$, то есть, $g$. А из-за того, что $\deg f< \deg g, \deg h<\deg g$, получаем, что $f(x)=h(x)$. \
+
+    Осталось каждую дробь суммы $\frac{a_i(x)}{p_i^{m_i}}$ разложить в сумму простейших, то есть
+    \[
+        \frac{a_i}{p_i^{m_i}}=\sum_{l=1}^{m_i}\frac{a_{i,l}(x)}{p_i^l(x)}, 
+    \]
+    где $\deg a_{i,l}<\deg p_i$. Опять же, нам нужно разложение
+    \[
+        a_i=\sum_l a_{i, l}p_i^{m_i-l}.
+    \]
+    В это можно и поверить наслово, но ниже приведём краткое доказательство.
+\end{proof}
+
+\begin{lemma}
+    (Та самая). Пусть $F$ - поле, $p$ - многочлен ненулевой степени из $F[x]$. Тогда любой многочлен $a\in F[x]$ может быть записан единственным образом в виде 
+    \[
+        a=a_0+a_1 p+\dots+a_n p^n,
+    \]
+    где дл] всякого $i$ либо $\deg a_i<\deg p$, либо $a_i=0$.
+\end{lemma}
+
+\begin{proof}
+    Существование по индукции по степени $a(x)$. База: если $\deg a<\deg p$, то просто возьмэм $a_0(x)=a(x)$. Если же $\deg a \geq \deg p$, то поделим $a(x)$ на $p(x)$ с остатком, получим $a(x)=p(x)q(x)+r(x)$, при этом $\deg r(x)<\deg p(x)$. Посмотрим на степень $q(x)$, 
+    \[
+        \deg q(x)=\deg(a(x)-r(x))-\deg p(x)=\deg a(x ) -deg p(x) < \deg a(x), 
+    \]
+    так как $\deg a(x)>\deg r(x)$, а значит, можно применить предположение индукции для $q(x)$:
+    \[
+        q(x)=a_1(x)+a_2(x)p(x)+\dots+a_n(x)(p(x))^{n-1}, 
+    \]
+    тогда
+    \[
+        a(x)=r(x)+q(x)p(x).
+    \]
+    Единственность тоже по индукции, теперь по $n$. Заметим: что $a_0(x)\equiv b_0(x)\mod p(x)$, так как всё остальное на $p(x)$ делится, при этом их степени меньше степени $p(x)$, а значит, $a_0(x)=b_0(x)$. Тогда сократим эти члены, поделим на $p(x)$ и применим индекционное предположение. 
+\end{proof}
+
+\resetall
 
 \subsection{Определение векторного пространства. Линейная зависимость. Существование базиса}
 
@@ -1038,6 +1237,8 @@
     Быстрый список для особо заебавшегося поиска.
     ]
 
+    \hyperlink{n39}{алгебраическая замкнутость}\
+    
     \hyperlink{n4}{ассоциированность}\
 
     \hyperlink{n19}{гомоморфизм}\
@@ -1048,7 +1249,7 @@
 
     \hyperlink{n9}{идеал}\
 
-    \hyperlink{22}{изоморфизм}\
+    \hyperlink{n22}{изоморфизм}\
 
     \hyperlink{n35}{интерполяция по Лагранжу}\
 
@@ -1074,17 +1275,23 @@
 
     \hyperlink{n10}{ОГИ}\
 
-    \hyperlink{n13}{ОТА}\
+    \hyperlink{n13}{ОТАр}\
+
+    \hyperlink{n40}{ОТАл}\
 
     \hyperlink{n2}{область целостности}\
 
     \hyperlink{n16}{поле}\
+
+    \hyperlink{n38}{поле комплексных}\
 
     \hyperlink{n37}{поле разложения}\
 
     \hyperlink{n18}{поле частных}\
 
     \hyperlink{n8}{простые}\ 
+
+    \hyperlink{n41}{разложение рациональных ф-й}\
 
     \hyperlink{n30}{содержание}\
 
